--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
 	"type": "module",
 	"dependencies": {
 		"@upstash/redis": "^1.36.1",
+		"cors": "^2.8.6",
 		"dotenv": "^17.2.3",
 		"express": "^5.2.1",
 		"mongoose": "^9.1.5",
