--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"dev": "nodemon server.js"
+		"dev": "nodemon api/server.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -13,10 +13,13 @@
 	"type": "module",
 	"dependencies": {
 		"@upstash/redis": "^1.36.1",
+		"bcrypt": "^6.0.0",
 		"cors": "^2.8.6",
 		"dotenv": "^17.2.3",
 		"express": "^5.2.1",
+		"jsonwebtoken": "^9.0.3",
 		"mongoose": "^9.1.5",
-		"nodemon": "^3.1.11"
+		"nodemon": "^3.1.11",
+		"uuid": "^13.0.0"
 	}
 }
