--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
     "react-scroll": "^1.9.3",
-    "tailwindcss": "^4.1.18"
+    "recharts": "^3.7.0",
+    "tailwindcss": "^4.1.18",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
